[package]
name = "ace128_driver"
version = "0.1.2"
authors = ["James Clarke <james.clarke42@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An embedded hal driver for the Bourns Absolute Contact Encoder (ACE-128)"
repository = "https://github.com/jamesklarke/ace128"
keywords = ["embedded", "embedded-hal", "encoder"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "0.2.4", features = ["unproven"]}

[dev-dependencies]
embedded-hal-mock = "0.7.2"
